docs(rmw-bf16): session handoff -- Phase 1+2a landed, Phase 2b kickoff
CLAUDE.md: new kickoff section (RMW FP32->BF16 line active; Phase 1 golden +
Phase 2a RTL primitives landed bit-exact on main/unpushed; Phase 2b next with
the int_to_bf16 deep-underflow MUST-FIX + width propagation). hardfloat-setup:
preserve the bf16 EmitBf16.scala driver + Java-17 --add-opens recipe for
reproducibility.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>